--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@ header {
   background-color: #eeede7;
   background-size: cover;
   position: relative;
+  border-radius: 20;
 }
 img {
   width: 12rem;
@@ -16,6 +17,123 @@ img {
   border-radius: 10px 8px 10px 8px;
   padding: 14px;
   margin: 0;
-  /* display: flex;
-  justify-content: end; */
+  display: flex;
+  justify-content: end;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #b9b7bd;
+  color: rgb(176, 133, 133);
+  border-radius: 20rem;
+}
+h2 {
+  padding: 2rem;
+  margin: 1rem;
+  color: rgb(176, 133, 133);
+}
+/* a {
+  text-decoration: none;
+} */
+.navbar-links ul {
+  padding: 0;
+  margin: 2rem;
+  display: flex;
+}
+.navbar-links li {
+  list-style: none;
+}
+.navbar-links li a {
+  text-decoration: none;
+  color: rgb(254, 250, 250);
+  padding: 2rem;
+  font-size: larger;
+}
+.navbar-links li:hover {
+  background-color: rgb(176, 133, 133);
+}
+.socialmedias {
+}
+.linkedin,
+.github {
+  padding: 0;
+  margin: 2rem;
+  display: inline-block;
+  display: flex;
+  justify-content: ;
+  color: #b9b7bd;
+  background-color: #b9b7bd;
+}
+#about-me {
+  border-radius: 5px 5px;
+  font-size: large;
+  background-color: #b9b7bd;
+
+  padding: 10px;
+  margin: 10px;
+  color: white;
+  font-family: "Arial Narrow", Arial, sans-serif;
+  font-size: larger;
+}
+
+form {
+  padding: 3px;
+  display: flex;
+  /* justify-content: center; */
+  flex-direction: column;
+  background-color: #eeede7;
+
+  width: 28%;
+  border-radius: 2px;
+}
+form input {
+  padding: 12px;
+}
+form button {
+  padding: 8px;
+}
+
+footer {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 15px;
+  /* background-color: #e7d2cc; */
+}
+footer h4 {
+  /* background-color: #274472; */
+  color: aliceblue;
+}
+#page-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  body {
+    color: rgb(9, 93, 150);
+  }
+
+  .navbar-links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+  .navbar-links li {
+    text-align: center;
+  }
+  .navbar-links li a {
+    padding: 0.5rem 1rem;
+  }
+  .navbar-links.active {
+    display: flex;
+  }
 }
